# libhop

./: CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  cbindgen.toml  regen-header.sh
.github/: components.json  crates-publish.py  package-export-smoke.py  release-artifact.py  release-provenance.py
.github/workflows/: cla.yml  sync-back.yml
examples/: smoke.c  smoke.sh  wire_vectors.c  wire_vectors.sh
include/: hop.h
src/: cabi.rs  lib.rs
