[package]
name = "hop"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Cross-platform bindings for Hop (Swift/Kotlin via UniFFI — DESIGN.md §12)."

[lib]
# The compiled artifact is `libhop` (the C ABI / universal SDK — see src/cabi.rs + sdk/hop.h),
# The crate is `hop` and the UniFFI namespace is `hop` (uniffi.hop), matching the lib.
name = "hop"
# cdylib/staticlib are what the iOS/Android builds link against; lib keeps it
# usable from Rust tests and the workspace.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
hop-core.workspace = true
# default-features = false so a mobile build can pick plain `bundled` OR encrypted `sqlcipher`
# (they'd conflict if both bundling backends were active). The `bundled`/`sqlcipher` features below
# forward the choice; the workspace default keeps plain SQLite for `cargo test --workspace`.
hop-store-sqlite = { workspace = true, default-features = false }
uniffi = "0.28"
thiserror.workspace = true
bs58 = "0.5"
postcard.workspace = true

# Binary that generates the Swift/Kotlin bindings from the compiled library.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[features]
default = ["bundled"]
cli = ["uniffi/cli"]
# Plain SQLite at rest (the workspace default). Fast build, no OpenSSL.
bundled = ["hop-store-sqlite/bundled"]
# SQLCipher-encrypted at rest (F-25). Build the MOBILE libhop with this so `open_keyed` actually
# encrypts: `cargo build -p hop --no-default-features --features sqlcipher --target <mobile>`.
sqlcipher = ["hop-store-sqlite/sqlcipher"]
